src/objects/Hierarchy_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>All hierarchy settings.</description>
    <fields>
        <fullName>Account_Processor__c</fullName>
        <description>ID of the default record type for Account. For example, if specifying Administrative (the recommended Account model), enter the ID of the Administrative record type for the Account object.</description>
        <inlineHelpText>ID of the default record type for Account. For example, if specifying Administrative (the recommended Account model), enter the ID of the Administrative record type for the Account object.</inlineHelpText>
        <label>Account Processor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounts_Addresses_Enabled__c</fullName>
        <description>Record Types of those Accounts that should have multi-addresses enabled.</description>
        <inlineHelpText>Record Types of those Accounts that should have multi-addresses enabled.</inlineHelpText>
        <label>Multi-Address Accounts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Accounts_to_Delete__c</fullName>
        <description>Record Types of those Accounts that should be deleted if all its children Contacts have been deleted.</description>
        <inlineHelpText>Record Types of those Accounts that should be deleted if all its children Contacts have been deleted.</inlineHelpText>
        <label>Accounts to Delete</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Admin_Account_Naming_Format__c</fullName>
        <inlineHelpText>This is the setting for admin account naming format</inlineHelpText>
        <label>Admin Account Naming Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Other_Name_Setting__c</fullName>
        <inlineHelpText>To store other naming setting for admin account</inlineHelpText>
        <label>Admin Other Name Setting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrative_Account_Record_Type__c</fullName>
        <description>The Account record type used for Administrative Accounts. This setting affects management of address records and the naming format of Administrative Accounts.</description>
        <inlineHelpText>The Account record type used for Administrative Accounts. This setting affects management of address records and the naming format of Administrative Accounts.</inlineHelpText>
        <label>Administrative Account Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advancement_Namespace__c</fullName>
        <defaultValue>&quot;gem&quot;</defaultValue>
        <description>The namespace of the Gift Entry Management managed package.</description>
        <inlineHelpText>The namespace of the Gift Entry Management managed package.</inlineHelpText>
        <label>GEM Namespace</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Record_Type_Enforced__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, an error results when users populate a primary field on Contact with an Account that has a record type mismatch to the record type defined in EDA Settings. The Affiliation record is not created and primary fields on Contact are not corrected</description>
        <inlineHelpText>If checked, an error results when users populate a primary field on Contact with an Account that has a record type mismatch to the record type defined in EDA Settings. The Affiliation record is not created and primary fields on Contact are not corrected</inlineHelpText>
        <label>Affiliation Record Type Enforced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affl_ProgEnroll_Copy_End_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether to set the End Date of the Affiliation created with a Program Enrollment. If enabled, set the End Date to the Program Enrollment&apos;s End Date. If disabled, don&apos;t specify the Affiliation&apos;s End Date.</description>
        <inlineHelpText>Indicates whether to set the End Date of the Affiliation created with a Program Enrollment. If enabled, set the End Date to the Program Enrollment&apos;s End Date. If disabled, don&apos;t specify the Affiliation&apos;s End Date.</inlineHelpText>
        <label>Affil End Date Copy from Prog Enroll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affl_ProgEnroll_Copy_Start_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether to set the Start Date of the Affiliation created with a Program Enrollment. If enabled, set the Start Date to the Program Enrollment&apos;s Start Date. If disabled, don&apos;t specify the Affiliation&apos;s Start Date.</description>
        <inlineHelpText>Indicates whether to set the Start Date of the Affiliation created with a Program Enrollment. If enabled, set the Start Date to the Program Enrollment&apos;s Start Date. If disabled, don&apos;t specify the Affiliation&apos;s Start Date.</inlineHelpText>
        <label>Affil Start Date Copy from Prog Enroll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affl_ProgEnroll_Del_Status__c</fullName>
        <description>If the related setting, Affil Delete When Delete Prog Enroll, is disabled, this setting specifies the value to set for the Affiliation&apos;s Status, when its related Program Enrollment is deleted.</description>
        <inlineHelpText>If the related setting, Affil Delete When Delete Prog Enroll, is disabled, this setting specifies the value to set for the Affiliation&apos;s Status, when its related Program Enrollment is deleted.</inlineHelpText>
        <label>Affil Status When Delete Prog Enroll</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affl_ProgEnroll_Del__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether to delete an Affiliation when its related Program Enrollment is deleted. If enabled, delete the Affiliation. If disabled, set the Affiliation&apos;s Status to the value specified in the related setting, Affil Status When Delete Prog Enroll.</description>
        <inlineHelpText>Indicates whether to delete an Affiliation when its related Program Enrollment is deleted. If enabled, delete the Affiliation. If disabled, set the Affiliation&apos;s Status to the value specified in the related setting, Affil Status When Delete Prog Enroll.</inlineHelpText>
        <label>Affil Delete When Delete Prog Enroll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affl_ProgEnroll_Role_Map__c</fullName>
        <description>If the related setting, Affil Set Role When Create Prog Enroll, is enabled, this setting specifies the value to set for the Role on the Affiliation created with a Program Enrollment.</description>
        <inlineHelpText>If the related setting, Affil Set Role When Create Prog Enroll, is enabled, this setting specifies the value to set for the Role on the Affiliation created with a Program Enrollment.</inlineHelpText>
        <label>Affil Role When Create Prog Enroll</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affl_ProgEnroll_Set_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether to specify a Role for the Affiliation created with a Program Enrollment. If enabled, set the Affiliation&apos;s Role to the value specified in the related setting, Affil Role When Create Prog Enroll. If disabled, don&apos;t specify a Role.</description>
        <inlineHelpText>Indicates whether to specify a Role for the Affiliation created with a Program Enrollment. If enabled, set the Affiliation&apos;s Role to the value specified in the related setting, Affil Role When Create Prog Enroll. If disabled, don&apos;t specify a Role.</inlineHelpText>
        <label>Affil Set Role When Create Prog Enroll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affl_ProgEnroll_Status_Map__c</fullName>
        <description>The Status value set on the Affiliation created with a Program Enrollment.</description>
        <inlineHelpText>The Status value set on the Affiliation created with a Program Enrollment.</inlineHelpText>
        <label>Affil Status When Create Prog Enroll</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_AutoCreated_Duplicates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Auto-created Relationships are auto-deduplicated to prevent duplicate Relationship records from being created between two Contacts. Check this box to disable this behavior &amp; allow multiple Relationships of the same Type to be created between two Contacts</description>
        <inlineHelpText>Auto-created Relationships are auto-deduplicated to prevent duplicate Relationship records from being created between two Contacts.  Check this box to disable this behavior &amp; allow multiple Relationships of the same Type to be created between two Contacts</inlineHelpText>
        <label>Allow Auto-Created Duplicate Relations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Async_Error_Check_Last_Run__c</fullName>
        <description>Used to keep track of the most recent execution of the Async Job error logger</description>
        <label>Async Error Check Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Automatic_Household_Naming__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the system will provide automatic naming for Household Names, Informal and Formal Greetings.</description>
        <inlineHelpText>If checked, the system will provide automatic naming for Household Names, Informal and Formal Greetings.</inlineHelpText>
        <label>Automatic Household Naming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contacts_Addresses_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Address management support for Contacts.</description>
        <inlineHelpText>Address management support for Contacts.</inlineHelpText>
        <label>Address management support for Contacts.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Contact_Language_Fluency__c</fullName>
        <description>The Fluency value automatically set on newly created Contact Language records when users set the Primary Language lookup field on a Contact.</description>
        <inlineHelpText>The Fluency value automatically set on newly created Contact Language records when users set the Primary Language lookup field on a Contact.</inlineHelpText>
        <label>Default Contact Language Fluency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Error_Handling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, EDA&apos;s error handling framework is disabled.</description>
        <inlineHelpText>If checked, EDA&apos;s error handling framework is disabled.</inlineHelpText>
        <label>Disable Error Handling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Preferred_Email_Enforcement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable the enforcement of the Preferred Email field for Contact.</description>
        <inlineHelpText>Select this box to disable the enforcement of the Preferred Email field for Contacts.</inlineHelpText>
        <label>Disable Preferred Email Enforcement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Preferred_Phone_Enforcement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable the enforcement of the Preferred Phone field for Contact.</description>
        <inlineHelpText>Select this box to disable the enforcement of the Preferred Phone field for Contacts.</inlineHelpText>
        <label>Disable Preferred Phone Enforcement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Course_Connections__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables Course Connections. Requires that at least two record types exist for Course Connections to be used for the default Active Student and Faculty.</description>
        <label>Enable Course Connections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Turn this on to enable debug statements in managed package code.</description>
        <inlineHelpText>Turn this on to enable debug statements in managed package code.</inlineHelpText>
        <label>Enable Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_New_Preferred_Phone_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Turns on the Preferred Phone functionality that was released in EDA 1.82. This functionality syncs the Preferred Phone field to the Contact&apos;s standard Phone field and validate that the value in Preferred Phone exists and has a value.</description>
        <inlineHelpText>Sync the Preferred Phone field to the Contact&apos;s standard Phone field and validate that the value in Preferred Phone exists and has a value.</inlineHelpText>
        <label>Enable New Preferred Phone Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Notifications_On__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether to send error notifications.</description>
        <inlineHelpText>Check this if you&apos;d like the system to post notifications for certain type of errors.</inlineHelpText>
        <label>Error Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Notifications_To__c</fullName>
        <description>Who should receive error notifications.</description>
        <inlineHelpText>Select the type of user to send notifications to.</inlineHelpText>
        <label>Error Notification Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Faculty_RecType__c</fullName>
        <description>The default record type when creating Course Connections for a faculty member.</description>
        <label>Faculty Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Account_Naming_Format__c</fullName>
        <inlineHelpText>This is the setting for household account naming format</inlineHelpText>
        <label>Household Account Naming Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Addresses_RecType__c</fullName>
        <description>The Account record type used for Household Accounts. This setting affects management of address records and the naming format of Household Accounts.</description>
        <inlineHelpText>The Account record type used for Household Accounts. This setting affects management of address records and the naming format of Household Accounts.</inlineHelpText>
        <label>Household Addresses Acc Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Other_Name_Setting__c</fullName>
        <inlineHelpText>To store other name setting for household account</inlineHelpText>
        <label>Household Other Name Setting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Populate_Affil_on_Student_Course_Cxn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If enabled, the Affiliation field on new Student Course Connection records automatically syncs with the Affiliation record associated with the Program Enrollment on the Student Course Connection.</description>
        <inlineHelpText>If enabled, the Affiliation field on new Student Course Connection records automatically syncs with the Affiliation record associated with the Program Enrollment on the Student Course Connection.</inlineHelpText>
        <label>Populate Affil on Student Course Cxn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone_Selection__c</fullName>
        <description>To select a desired Preferred Phone when Phone clean up Batch job runs</description>
        <inlineHelpText>Select a desired Preferred Phone when the Batch Job runs.</inlineHelpText>
        <label>Preferred Phone Selection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prevent_Account_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reserved for future use.</description>
        <label>Prevent Account Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_Address_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reserved for future use.</description>
        <label>Prevent Address Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_Affiliation_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reserved for future use.</description>
        <label>Prevent Affiliation Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_Behavior_Involvement_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reserved for future use.</description>
        <label>Prevent Behavior Involvement Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_Case_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reserved for future use.</description>
        <label>Prevent Case Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_Contact_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reserved for future use.</description>
        <label>Prevent Contact Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_Course_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reserved for future use.</description>
        <label>Prevent Course Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_Course_Connection_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reserved for future use.</description>
        <label>Prevent Course Connection Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_Facility_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reserved for future use.</description>
        <label>Prevent Facility Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_Course_Offering_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reserved for future use.</description>
        <label>Prevent Course Offering Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_Plan_Requirement_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reserved for future use.</description>
        <label>Prevent Plan Requirement Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_Program_Enrollment_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reserved for future use.</description>
        <label>Prevent Program Enrollment Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_Program_Plan_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reserved for future use.</description>
        <label>Prevent Program Plan Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_Term_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reserved for future use.</description>
        <label>Prevent Term Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_Test_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reserved for future use.</description>
        <label>Prevent Test Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_Time_Block_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reserved for future use.</description>
        <label>Prevent Time Block Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reciprocal_Method__c</fullName>
        <description>Determines method used to generate the reciprocal relationship.  Either List Setting which uses custom settings by gender, or Value Inversion, which inverts the type if appropriate (&quot;Parent-Child&quot; to &quot;Child-Parent&quot;)</description>
        <inlineHelpText>Determines method used to generate the reciprocal relationship.  Either List Setting which uses custom settings by gender, or Value Inversion, which inverts the type if appropriate (&quot;Parent-Child&quot; to &quot;Child-Parent&quot;)</inlineHelpText>
        <label>Reciprocal Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Name_Field_Id__c</fullName>
        <description>The ID of the Name field that is dynamically generated in this org, can be found via source view when creating a new Relationship or in the URL when using the &apos;New Relationships&apos; button.  Populating this value will allow the field to pre-populate when creating new Relationships from the Relationship Viewer</description>
        <inlineHelpText>Populating this value will allow the field to pre-populate when creating new Relationships from the Relationship Viewer (see description for more information)</inlineHelpText>
        <label>Relationship Name Field Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Name_Id_Field_Id__c</fullName>
        <description>The ID of the Name Id field that is dynamically generated in this org, can be found via source view when creating a new Relationship or in the URL when using the &apos;New Relationships&apos; button. Populating this value will allow the field to pre-populate when creating new Relationships from the Relationship Viewer</description>
        <inlineHelpText>Populating this value will allow the field to pre-populate when creating new Relationships from the Relationship Viewer (see description for more information)</inlineHelpText>
        <label>Relationship Name Id Field Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Simple_Address_Change_Treated_as_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, changes to a single Contact or Account address field update the existing Address, rather than creating a new Address.</description>
        <inlineHelpText>If checked, changes to a single Contact or Account address field update the existing Address, rather than creating a new Address.</inlineHelpText>
        <label>Simple Address Change Treated as Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Store_Errors_On__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag that indicates whether errors are going to be stored in the database.</description>
        <inlineHelpText>Check this if you&apos;d like errors to be stored in the database.</inlineHelpText>
        <label>Store Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Student_RecType__c</fullName>
        <description>The default record type when creating Course Connections for active students.</description>
        <label>Student Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validate_Program_Plan_for_Nested_PR__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When selected, Plan Requirements can specify either a Program Plan or a parent Plan Requirement, but not both. For example, a Plan Requirement that has a parent Plan Requirement can’t also specify a Program Plan, or vice versa. If you specify both a Program Plan and a parent Plan Requirement, an error message will prevent you from saving until only one is selected.</description>
        <inlineHelpText>When selected, Plan Requirements can specify either a Program Plan or a parent Plan Requirement, but not both. If you specify both a Program Plan and a parent Plan Requirement, an error message will prevent you from saving until only one is selected.</inlineHelpText>
        <label>Validate Program Plan for Nested PR</label>
        <type>Checkbox</type>
    </fields>
    <label>Hierarchy Settings</label>
</CustomObject>